--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.slf4j:slf4j-api:1.7.32'
+    implementation 'org.slf4j:slf4j-simple:1.7.32'
+
+    implementation 'org.springframework:spring-context:5.3.9'
     implementation 'com.elmakers.mine.bukkit:EffectLib:10.2'
 
     compileOnly "com.destroystokyo.paper:paper-api:1.12.2-R0.1-SNAPSHOT"
